# viewport2

./: Cargo.toml  README.md  viewport.yml  viewport2.yml
docs/design/: 2026-03-18-viewport.md  2026-03-18-viewport2.md  2026-03-19-viewport-completion.md  2026-03-19-viewport2-completion.md
src/: capture.rs  cli.rs  config.rs  convert.rs  logging.rs  main.rs  output.rs  overlay.rs  pipeline.rs  rect.rs
