[package]
name = "viewport2"
version = "0.1.0"
edition = "2024"
authors = ["Scott A. Idler <scott.a.idler@gmail.com>"]
build = "build.rs"
description = "Draggable screen region capture tool that outputs to a virtual camera for presentations"

[dependencies]
ashpd = { version = "0.13.7", features = ["screencast"] }
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
dirs = "6.0.0"
enumflags2 = "0.7.12"
env_logger = "0.11.9"
eyre = "0.6.12"
gtk4 = "0.9"
log = "0.4.29"
nix = { version = "0.31.2", features = ["ioctl"] }
pipewire = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.50.0", features = ["rt", "macros"] }
yuvutils-rs = "0.8"

[build-dependencies]
