[package]
name = "viewport2"
version = "0.2.2"
edition = "2024"
authors = ["Scott A. Idler <scott.a.idler@gmail.com>"]
build = "build.rs"
description = "Draggable screen region capture tool that outputs to a virtual camera for presentations"

[dependencies]
ashpd = { version = "0.13.7", features = ["screencast"] }
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
enumflags2 = "0.7.12"
eyre = "0.6.12"
gtk4 = "0.9"
nix = { version = "0.31.2", features = ["ioctl"] }
pipewire = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.50.0", features = ["rt", "macros"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
yuvutils-rs = "0.8"

[build-dependencies]
